overflow fix

--- a/mobile-site/mobileStyle.css
+++ b/mobile-site/mobileStyle.css
@@ -58,9 +58,15 @@ nav ul li:active
     background-color: rgba(0,220,0,0.7);
     transform: scale(0.7);
 }
+
+section
+{
+    overflow: hidden;
+}
+
 /* drone */
 .drone{
-    position: absolute;
+    position: fixed;
     -webkit-animation: animate 80s linear infinite normal running 0s none;
   opacity: 0;
     height: 57px;
@@ -77,7 +83,7 @@ nav ul li:active
     }
 
     #wing1{
-        position: absolute;
+        position: fixed;
         width: 100px;
         left: -44px;
         top: 3px;
@@ -149,7 +155,7 @@ nav ul li:active
 
 }
 .cloud {
-    position: absolute;
+    position: fixed;
 
         box-shadow: 0px 1px 0px 0px #0000001f;
 }
